--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Mac preference .dotfile
+.DS_Store
+
+# VIM related 'meta' files
+.tern-port
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
