--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "knex": "0.15.2",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.9.8",
+    "pg": "7.4.3",
     "serve-favicon": "~2.4.5"
   }
 }
