-Added: Routes and queries create, update and removing records

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "pretest": "rimraf ./specs/test.db && touch ./specs/test.db && sleep 4",
+    "pretest": "rimraf ./specs/test.db && touch ./specs/test.db ",
     "test": " NODE_ENV=test jest",
     "predbup": "knex migrate:rollback",
     "dbup": "knex migrate:latest && knex seed:run",
@@ -21,13 +21,14 @@
     "knex": "0.15.2",
     "morgan": "~1.9.0",
     "pg": "7.4.3",
-    "serve-favicon": "~2.4.5",
-    "sqlite3": "4.0.2"
+    "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "sqlite3": "4.0.2",
     "eslint": "5.2.0",
     "eslint-plugin-jest": "21.18.0",
     "eslint-plugin-react": "7.10.0",
+    "is-type-of": "1.2.0",
     "jest": "23.4.1",
     "nodemon": "1.18.3",
     "rimraf": "2.6.2",
